--- a/index.html
+++ b/index.html
@@ -1,33 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Base Apparel coming soon page</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Base Apparel coming soon page</title>
 
-  We're coming soon
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
 
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
+    <header class="header hidden">
+      <img class="header__logo" src="images/logo.svg" alt="base apparel">
+    </header>
+    <main class="main">
+      <div class="main__banner"></div>
+      <div class="text-content">
+        <img class="text-content__logo" aria-hidden="true" src="images/logo.svg" alt="base apparel">
+        <h1 class="text-content__title">We're <strong class="text-content__title-highlight">coming soon</strong></h1>
+        <p class="text-content__description">Hello fellow shoppers! We're currently building our new fashion store. Add your email below to stay up-to-date with announcements and our launch deals.</p>
+        <form class="form">
+          <div class="form__input-container">
+            <input class="form__field" type="email" name="email" placeholder="Email Address" aria-label="Email Address" autocomplete="email">
+            <button class="form__button" type="submit"><img src="images/icon-arrow.svg" alt=""></button>
+          </div>
+          <span class="form__error" aria-live="polite">Email is Required</span>
+        </form>
+      </div>
+    </main>
 
-  Email Address
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
