add: link preloads

--- a/index.html
+++ b/index.html
@@ -14,6 +14,30 @@
 
     <title>Frontend Mentor | Base Apparel coming soon page</title>
 
+    <link
+      rel="preload"
+      href="fonts/josefin-sans-v34-latin-regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+
+    <link
+      rel="preload"
+      href="fonts/josefin-sans-v34-latin-300.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+
+    <link
+      rel="preload"
+      href="fonts/josefin-sans-v34-latin-600.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
